Creating the members section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,6 +32,28 @@
                 <p>
                     Acreditamos que o esporte vai além das quatro linhas. Aqui, encontramos amigos e construímos
                     laços que vão além do resultado de um jogo.
+                </p>
+            </div>
+        </section>
+
+        <section id="membros">
+            <div>
+                <h2>Membros</h2>
+                <h3>Fundadores:</h3>
+                <ul>
+                    <li><a href="https://www.instagram.com/viniciusdevassis.ig" target="_blank">Vinícius de Assis</a></li>
+                    <li><a href="https://www.instagram.com/pedro_burity23" target="_blank">Pedro Burity</a></li>
+                </ul>
+                <h3>Conselheiros</h3>
+                <ul>
+                    <li><a href="https://www.instagram.com/vitor7ima" target="_blank">Vitor Lima</a></li>
+                    <li><a href="https://www.instagram.com/suzarte__emanuel" target="_blank">Emanuel Suzarte</a></li>
+                    <li><a href="https://www.instagram.com/joaou.lucass" target="_blank">João Lucas</a></li>
+                    <li><a href="https://www.instagram.com/mesaquino" target="_blank">Mesaque Aquino</a></li>
+                </ul>
+                <p>
+                    Nossa missão é promover a competição com base na ética, no fair play e na camaradagem.
+                    Buscamos não apenas a vitória, mas sim a conquista obtida com alegria, honra e respeito mútuo.
                 </p>
             </div>
         </section>
