Creating the remaining sections

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                     <li><a href="https://www.instagram.com/viniciusdevassis.ig" target="_blank">Vinícius de Assis</a></li>
                     <li><a href="https://www.instagram.com/pedro_burity23" target="_blank">Pedro Burity</a></li>
                 </ul>
-                <h3>Conselheiros</h3>
+                <h3>Conselheiros:</h3>
                 <ul>
                     <li><a href="https://www.instagram.com/vitor7ima" target="_blank">Vitor Lima</a></li>
                     <li><a href="https://www.instagram.com/suzarte__emanuel" target="_blank">Emanuel Suzarte</a></li>
-                    <li><a href="https://www.instagram.com/joaou.lucass" target="_blank">João Lucas</a></li>
+                    <li><a href="https://www.instagram.com/joaou.lucass" target="_blank">João Lucas Rodrigues</a></li>
                     <li><a href="https://www.instagram.com/mesaquino" target="_blank">Mesaque Aquino</a></li>
                 </ul>
                 <p>
@@ -56,6 +56,20 @@
                     Buscamos não apenas a vitória, mas sim a conquista obtida com alegria, honra e respeito mútuo.
                 </p>
             </div>
+        </section>
+
+        <section id="arquivo">
+            <h2>Histórico de competições</h2>
+            <h4>Nessa seção você pode ver detalhes das competições que já ocorreram.*</h4>
+            <p>
+                *As edições 1 e 2 terão apenas a divulgação do pódio, informações detalhadas somente a partir da edição 3.
+            </p>
+        </section>
+
+        <section id="campeonato">
+            <h2>CEFA Non Champions League</h2>
+            <p>A 5ª edição do nosso campeonato, que será realizado no dia 15/11/2024.</p>
+            <p>Serão ao todo 15 participantes, todos em busca do mesmo objetivo, ganhar o tão desejado título. Em breve mais informações <a href="">aqui</a></p>
         </section>
     </main>
     
