Styling the navbar and home section

--- a/src/index.html
+++ b/src/index.html
@@ -3,33 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./output.css" rel="stylesheet">
     <title>CEFA - Conselho Esportivo de Futebol e Amigos</title>
 </head>
-<body>
-    <header>
+<body class="bg-redcefa">
+    <header class="flex justify-between items-center px-20 py-6 bg-bluecefa font-poppins font-extrabold">
         <a href="index.html">
-            <img src="imgs/cefa-logo-removebg.png" alt="CEFA" width="64" height="64">
+            <img src="/imgs/cefa-logo-removebg.png" alt="CEFA" width="64px" height="64px">
         </a>
-        <nav>
-            <a href="#home">CEFA</a>
-            <a href="#membros">Membros</a>
-            <a href="#arquivo">Arquivo</a>
-            <a href="#campeonato">CEFA - NCL</a>
+        <nav class="text-white text-xl">
+            <a class="px-8" href="#home">CEFA</a>
+            <a class="px-8" href="#membros">Membros</a>
+            <a class="px-8" href="#arquivo">Arquivo</a>
+            <a class="px-8" href="#campeonato">CEFA - NCL</a>
         </nav>
     </header>
 
     <main>
-        <section id="home">
-            <img src="imgs/cefa-logo.jpg" alt="" width="380" height="380">
+        <section class="flex font-roboto text-white relative" id="home">
+            <img class="bg-bluecefa m-1" src="/imgs/cefa-logo-removebg.png" alt="" width="380" height="380">
 
-            <div>
-                <h1>CEFA - Conselho Esportivo de Futebol e Amigos</h1>
-                <p>
+            <div class="m-auto">
+                <h1 class="flex font-semibold m-10 text-4xl">CEFA - Conselho Esportivo de Futebol e Amigos</h1>
+                <p class="text-xl m-10">
                     Na CEFA, respiramos o espírito apaixonado do esporte, alimentando uma comunidade unida por
                     nossa paixão pelo futebol e pelo companherismo. Somos mais do que uma entidade esportiva,
                     somos uma família que celebra a competição saudável, divertida, amistosa e integra.
                 </p>
-                <p>
+                <p class="text-xl m-10">
                     Acreditamos que o esporte vai além das quatro linhas. Aqui, encontramos amigos e construímos
                     laços que vão além do resultado de um jogo.
                 </p>
