resolving image path error

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="bg-redcefa">
     <header class="flex justify-between items-center px-20 py-6 bg-bluecefa font-poppins font-extrabold">
         <a href="index.html">
-            <img src="/imgs/cefa-logo-removebg.png" alt="CEFA" width="64px" height="64px">
+            <img src="imgs/cefa-logo-removebg.png" alt="CEFA" width="64px" height="64px">
         </a>
         <nav class="text-white text-xl">
             <a class="px-8" href="#home">CEFA</a>
@@ -21,7 +21,7 @@
 
     <main>
         <section class="flex font-roboto text-white relative" id="home">
-            <img class="bg-bluecefa m-1" src="/imgs/cefa-logo-removebg.png" alt="" width="380" height="380">
+            <img class="bg-bluecefa m-1" src="imgs/cefa-logo-removebg.png" alt="" width="380" height="380">
 
             <div class="m-auto">
                 <h1 class="flex font-semibold m-10 text-4xl">CEFA - Conselho Esportivo de Futebol e Amigos</h1>
